--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <input type="text">
             
             <div class="image_container">
-                <img src="./image/bird.jpg" alt="bird">
-                <img src="./image/cat.jpg" alt="cat">
-                <img src="./image/dog.jpg" alt="dog">
+                <img src="./image/bird.jpg" alt="oiseau">
+                <img src="./image/cat.jpg" alt="chat">
+                <img src="./image/dog.jpg" alt="chien">
                 <img src="./image/lion.jpg" alt="lion">
-                <img src="./image/monkey.jpg" alt="monkey">
-                <img src="./image/rabbit.jpg" alt="rabbit">
+                <img src="./image/monkey.jpg" alt="singe">
+                <img src="./image/rabbit.jpg" alt="lapin">
             </div>
 
             <script src="./app.js"></script>
